@@ -1,3 +1,10 @@
+2004-12-25 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/GParted_Core.cc,
+	  src/Win_GParted.cc,
+	  include/Utils.h,
+	  include/GParted_Core.h: moved inline Get_FS from Utils.h to GParted_Core, saves a few K in exe size ;)
+
 2004-12-23 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/GParted_Core.cc: removed sorting of detected devices. I figured we didn't need it anymore now 'deep_scan' is removed.
